--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,10 +20,11 @@
     <color name="_1a1a1a">#1A1A1A</color>
 
     <color name="colorBackground">#FFFFFF</color>
-    <color name="colorOnBackground">#0D062D</color>
+    <color name="colorOnBackground">#111111</color>
+    <color name="colorBackgroundFloating">#F5F5F5</color>
 
     <color name="colorSurface">#F5F5F5</color>
-    <color name="colorOnSurface">#0D062D</color>
+    <color name="colorOnSurface">#111111</color>
     <color name="colorOnSurfaceVariant">#222222</color>
 
     <color name="colorPrimary">#9F1EE9</color>
