--- a/app/src/main/res/color/radio_selector.xml
+++ b/app/src/main/res/color/radio_selector.xml
@@ -5,5 +5,5 @@
     <!-- Цвет, когда выбрано -->
     <item android:state_checked="true" android:color="@color/main_purple" />
     <!-- Цвет по умолчанию -->
-    <item android:color="@color/white" />
+    <item android:color="?attr/colorOnBackground" />
 </selector>
