--- a/app/src/main/res/drawable/gradient_background.xml
+++ b/app/src/main/res/drawable/gradient_background.xml
@@ -6,7 +6,7 @@
             <gradient
                 android:angle="-90"
                 android:startColor="@color/main_purple"
-                android:endColor="@color/gray111"
+                android:endColor="?android:attr/colorBackground"
                 android:type="linear"
                 android:startY="0.8"
                 android:endY="1.0" />
