--- a/app/src/main/res/drawable/ic_arrow_back.xml
+++ b/app/src/main/res/drawable/ic_arrow_back.xml
@@ -1,9 +1,5 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="512dp"
-    android:height="512dp"
-    android:viewportWidth="22"
-    android:viewportHeight="24">
-  <path
-      android:fillColor="#FF000000"
-      android:pathData="M19,11H9l3.29,-3.29a1,1 0,0 0,0 -1.42,1 1,0 0,0 -1.41,0l-4.29,4.3A2,2 0,0 0,6 12H6a2,2 0,0 0,0.59 1.4l4.29,4.3a1,1 0,1 0,1.41 -1.42L9,13H19a1,1 0,0 0,0 -2Z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android" android:height="512dp" android:viewportHeight="24" android:viewportWidth="24" android:width="512dp">
+      
+    <path android:fillColor="#FF000000" android:pathData="m13.646,18.342l-5.281,-5.281c-0.283,-0.283 -0.439,-0.66 -0.439,-1.061s0.156,-0.777 0.439,-1.061l5.281,-5.281 0.707,0.707 -5.281,5.281c-0.094,0.095 -0.146,0.22 -0.146,0.354s0.052,0.259 0.146,0.354l5.281,5.281 -0.707,0.707Z"/>
+    
 </vector>
