--- a/app/src/main/res/drawable/rounded_button_background.xml
+++ b/app/src/main/res/drawable/rounded_button_background.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="18dp"/>
-    <solid android:color="?attr/colorPrimary"/>
+    <solid android:color="@color/white"/>
     <padding android:left="18dp" android:right="18dp"/>
 </shape>
