--- a/app/src/main/res/drawable/rounded_search_view.xml
+++ b/app/src/main/res/drawable/rounded_search_view.xml
@@ -3,14 +3,14 @@
     <item>
         <!-- Цвет фона -->
         <shape android:shape="rectangle">
-            <solid android:color="@color/gray555"/> <!-- Цвет границы -->
+            <solid android:color="?attr/colorOutline"/> <!-- Цвет границы -->
             <corners android:radius="25dp"/> <!-- Закругленные углы -->
         </shape>
     </item>
     <item android:right="1dp" android:left="1dp" android:top="1dp" android:bottom="1dp">
         <!-- Граница -->
         <shape android:shape="rectangle">
-            <solid android:color="@color/gray111"/> <!-- Цвет фона -->
+            <solid android:color="?android:attr/colorBackground"/> <!-- Цвет фона -->
             <corners android:radius="25dp"/> <!-- Закругленные углы границы -->
         </shape>
     </item>
