--- a/app/src/main/res/layout/bottom_sheet_copy_titles.xml
+++ b/app/src/main/res/layout/bottom_sheet_copy_titles.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:padding="24dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="?android:attr/colorBackground">
+    android:background="?attr/colorBackgroundFloating">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -30,6 +31,7 @@
             android:background="?attr/selectableItemBackgroundBorderless"
             android:contentDescription="@string/copy_name"
             android:tint="?attr/colorOnBackground" />
+
     </LinearLayout>
 
     <TextView
@@ -61,6 +63,8 @@
             android:textSize="18sp"
             android:layout_marginEnd="8dp" />
 
+        <!-- ИЗОБРАЖЕНИЯ РЕНДЕРЯТСЯ ПЛОХО -->
+
         <androidx.appcompat.widget.AppCompatImageButton
             android:id="@+id/copyOrTitleButton"
             android:layout_width="16dp"
@@ -70,6 +74,8 @@
             android:background="?attr/selectableItemBackgroundBorderless"
             android:contentDescription="@string/copy_or_name"
             android:tint="?attr/colorOnBackground" />
+
+
     </LinearLayout>
 
     <TextView
@@ -80,11 +86,12 @@
         android:textSize="16sp"
         android:layout_marginBottom="24dp" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/closeButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/close"
-        android:background="@drawable/rounded_button_cansel_border"
-        android:textColor="?attr/colorSecondary"/>
+        android:textColor="?attr/colorSecondary"
+        style="@style/Widget.Material3.Button.OutlinedButton"
+        app:cornerRadius="18dp" />
 </LinearLayout>
