--- a/app/src/main/res/layout/fragment_filter.xml
+++ b/app/src/main/res/layout/fragment_filter.xml
@@ -34,7 +34,8 @@
                     android:id="@+id/back_button"
                     android:layout_width="36dp"
                     android:layout_height="36dp"
-                    android:background="@null"
+                    android:layout_gravity="center_vertical"
+                    android:background="?attr/selectableItemBackgroundBorderless"
                     android:scaleType="centerInside"
                     android:src="@drawable/ic_arrow_back"
                     android:contentDescription="@string/desc_back"
@@ -172,25 +173,29 @@
         app:layout_constraintEnd_toEndOf="parent">
 
 
-
-        <androidx.appcompat.widget.AppCompatButton
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/cancel_button"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
             android:text="@string/close2"
-            android:background="@drawable/rounded_button_cansel_border"
-            android:textColor="?attr/colorSecondary"/>
+            android:textColor="?attr/colorSecondary"
+            style="@style/Widget.Material3.Button.OutlinedButton"
+            app:cornerRadius="18dp"
+            android:minHeight="48dp"
+            android:paddingVertical="12dp"/>
 
-        <androidx.appcompat.widget.AppCompatButton
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/apply_button"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
             android:text="@string/save4"
-            android:background="@drawable/rounded_button_background"
+            android:layout_marginStart="16dp"
+            app:cornerRadius="18dp"
             android:textColor="?attr/colorOnPrimary"
-            android:layout_marginStart="16dp"/>
+            android:minHeight="48dp"
+            android:paddingVertical="12dp"/>
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
