--- a/app/src/main/res/layout/fragment_filtered_list.xml
+++ b/app/src/main/res/layout/fragment_filtered_list.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/gray111"
+    android:background="?android:attr/colorBackground"
     tools:context=".ui.filtered_list.FilteredListFragment">
 
     <!-- Верхняя панель -->
@@ -16,16 +16,16 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="22dp"
         android:layout_marginTop="25dp"
-        android:background="@color/gray111">
+        android:background="?android:attr/colorBackground">
 
         <androidx.appcompat.widget.AppCompatImageButton
             android:id="@+id/back_button"
             android:layout_width="36dp"
             android:layout_height="36dp"
-            android:background="@null"
+            android:background="?attr/selectableItemBackgroundBorderless"
             android:scaleType="centerInside"
             android:src="@drawable/ic_arrow_back"
-            android:tint="@color/white"
+            android:tint="?attr/colorOnBackground"
             android:contentDescription="@string/desc_back"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -36,21 +36,23 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/head_filters"
-            android:textColor="@color/white"
+            android:textColor="?attr/colorOnBackground"
             android:textSize="24sp"
             app:layout_constraintStart_toEndOf="@id/back_button"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginStart="10dp" />
 
-        <androidx.appcompat.widget.AppCompatButton
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/editFiltersButton"
-            android:layout_width="wrap_content"
-            android:layout_height="36dp"
-            android:paddingHorizontal="15dp"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
             android:text="@string/change"
-            android:background="@drawable/rounded_button_cansel_border"
-            android:textColor="@color/gray_for_cancel"
+            android:textColor="?attr/colorSecondary"
+            style="@style/Widget.Material3.Button.OutlinedButton"
+            app:cornerRadius="18dp"
+            android:minHeight="48dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" />
@@ -60,9 +62,9 @@
         android:id="@+id/filteredItemsList"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
         android:layout_marginTop="15dp"
         android:layout_marginBottom="60dp"
+        android:layout_weight="1"
         android:contentDescription="@string/desc_list"
         android:scrollbarThumbVertical="@color/main_purple"
         tools:listitem="@layout/item_in_list" />
@@ -74,5 +76,6 @@
         android:layout_gravity="center"
         android:layout_margin="50dp"
         android:text="@string/nothing_found"
+        android:textColor="@color/white"
         android:visibility="gone" />
 </LinearLayout>
