--- a/app/src/main/res/layout/fragment_franchise.xml
+++ b/app/src/main/res/layout/fragment_franchise.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/gray111"
+    android:background="?android:attr/colorBackground"
     tools:context=".ui.franchise.FranchiseFragment">
 
     <LinearLayout
@@ -16,24 +16,24 @@
         android:layout_marginHorizontal="22dp"
         android:layout_marginVertical="25dp"
         android:gravity="center_vertical"
-        android:background="@color/gray111">
+        android:background="?android:attr/colorBackground">
 
         <androidx.appcompat.widget.AppCompatImageButton
             android:id="@+id/back_button"
             android:layout_width="36dp"
             android:layout_height="36dp"
-            android:background="@null"
+            android:background="?attr/selectableItemBackgroundBorderless"
             android:scaleType="centerInside"
             android:contentDescription="@string/desc_back"
             android:src="@drawable/ic_arrow_back"
-            android:tint="@color/white" />
+            android:tint="?attr/colorOnBackground" />
 
         <TextView
             android:id="@+id/franchiseTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/franchise"
-            android:textColor="@color/white"
+            android:textColor="?attr/colorOnBackground"
             android:textSize="24sp"
             android:layout_marginStart="10dp" />
     </LinearLayout>
@@ -48,9 +48,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="22dp"
-            android:gravity="center_vertical"
             android:layout_marginBottom="10dp"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:gravity="center_vertical">
 
             <TextView
                 android:id="@+id/franchise_description_title"
@@ -58,19 +58,20 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/test_Desc"
-                android:textColor="@color/white"
-                android:textSize="18sp"
+                android:textColor="?attr/colorOnBackground"
+                android:textSize="22sp"
+                android:textFontWeight="600"
                 android:textStyle="bold" />
 
             <androidx.appcompat.widget.AppCompatImageButton
                 android:id="@+id/franchise_close_button"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
-                android:background="@null"
+                android:background="?attr/selectableItemBackgroundBorderless"
                 android:scaleType="centerInside"
                 android:contentDescription="@string/desc_hide"
                 android:src="@drawable/ic_eye_open"
-                android:tint="@color/white" />
+                android:tint="?attr/colorOnBackground" />
         </LinearLayout>
 
         <TextView
@@ -78,7 +79,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="22dp"
-            android:textColor="@color/white"
+            android:textColor="?attr/colorOnBackground"
             android:textSize="16sp"
             tools:text="Список всех частей франшизы: 3 сезона, 2 фильма." />
     </LinearLayout>
@@ -93,5 +94,4 @@
         android:contentDescription="@string/desc_list"
         android:scrollbarThumbVertical="@color/main_purple"
         tools:listitem="@layout/item_in_list" />
-
 </LinearLayout>
