--- a/app/src/main/res/layout/fragment_item.xml
+++ b/app/src/main/res/layout/fragment_item.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/gray111"
+    android:background="?android:attr/colorBackground"
     tools:context=".ui.item.ItemFragment">
 
     <androidx.core.widget.NestedScrollView
@@ -29,6 +29,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="530dp"
                     android:scaleType="centerCrop"
+                    android:src="@drawable/adventure_time"
                     android:background="@android:color/transparent"
                     app:shapeAppearanceOverlay="@style/RoundedBottomCorners"
                     app:layout_constraintBaseline_toTopOf="parent"
@@ -49,6 +50,7 @@
                     android:id="@+id/title_item"
                     android:fontFamily="@font/roboto"
                     android:textColor="@color/white"
+                    android:textFontWeight="600"
                     android:textStyle="bold"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -107,89 +109,104 @@
                     android:layout_marginTop="17dp"
                     android:layout_marginHorizontal="22dp">
 
-                    <androidx.appcompat.widget.AppCompatButton
+                    <com.google.android.material.button.MaterialButton
                         android:id="@+id/addButton"
                         android:fontFamily="@font/roboto"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:layout_marginEnd="16dp"
-                        android:paddingVertical="8dp"
                         android:text="@string/add_button"
                         android:textColor="@color/black"
-                        android:textSize="16sp"
-                        android:background="@drawable/rounded_button_background" />
+                        android:textSize="20sp"
+                        app:cornerRadius="18dp"
+                        android:minHeight="48dp"
+                        android:paddingVertical="8dp"
+                        style="@style/Widget.Material3.Button.OutlinedButton"
+                        app:backgroundTint="@color/white" />
 
-                    <androidx.constraintlayout.widget.ConstraintLayout
+                    <com.google.android.material.card.MaterialCardView
                         android:id="@+id/rateButton"
-                        android:layout_width="76dp"
-                        android:layout_height="match_parent"
-                        android:background="@drawable/rounded_button_background"
-                        android:padding="10dp">
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="8dp"
+                        app:cardCornerRadius="18dp"
+                        app:strokeColor="?attr/colorOutline"
+                        app:strokeWidth="1dp"
+                        app:cardBackgroundColor="@color/white"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent">
 
-                        <ImageView
-                            android:id="@+id/rateIcon"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:scaleType="centerInside"
-                            android:src="@drawable/ic_rating"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintEnd_toStartOf="@id/rateText"
-                            android:contentDescription="@string/test_contentDesc"
-                            android:layout_marginEnd="4dp" />
+                        <androidx.constraintlayout.widget.ConstraintLayout
+                            android:layout_width="76dp"
+                            android:layout_height="44dp"
+                            android:padding="10dp">
 
-                        <TextView
-                            android:id="@+id/rateText"
-                            android:fontFamily="@font/roboto"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:gravity="center"
-                            android:textColor="@color/main_purple"
-                            android:textSize="20sp"
-                            android:visibility="gone"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintTop_toTopOf="parent"
-                            app:layout_constraintBottom_toBottomOf="parent"/>
-                    </androidx.constraintlayout.widget.ConstraintLayout>
+                            <ImageView
+                                android:id="@+id/rateIcon"
+                                android:layout_width="wrap_content"
+                                android:layout_height="0dp"
+                                android:scaleType="centerInside"
+                                android:src="@drawable/ic_rating_star"
+                                android:contentDescription="@string/test_contentDesc"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toTopOf="parent"
+                                app:layout_constraintBottom_toBottomOf="parent"
+                                app:layout_constraintEnd_toStartOf="@id/rateText" />
+
+                            <TextView
+                                android:id="@+id/rateText"
+                                android:layout_width="wrap_content"
+                                android:layout_height="0dp"
+                                android:gravity="center_vertical"
+                                android:fontFamily="@font/roboto"
+                                android:textColor="@color/main_purple"
+                                android:textSize="20sp"
+                                android:visibility="gone"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintTop_toTopOf="parent"
+                                app:layout_constraintBottom_toBottomOf="parent"/>
+                        </androidx.constraintlayout.widget.ConstraintLayout>
+                    </com.google.android.material.card.MaterialCardView>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginHorizontal="22dp">
+
+                    <TextView
+                        android:id="@+id/release_date"
+                        android:fontFamily="@font/roboto"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/test_date"
+                        android:textColor="?attr/colorOnBackground"
+                        android:textSize="18sp" />
+
+                    <TextView
+                        android:id="@+id/category"
+                        android:fontFamily="@font/roboto"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/test_category"
+                        android:textColor="?attr/colorOnBackground"
+                        android:textSize="18sp" />
+
+                    <TextView
+                        android:id="@+id/genre"
+                        android:fontFamily="@font/roboto"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/test_genre"
+                        android:textColor="?attr/colorOnBackground"
+                        android:textSize="18sp" />
                 </LinearLayout>
             </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_marginTop="16dp"
-                android:layout_marginHorizontal="22dp">
 
-                <TextView
-                    android:id="@+id/release_date"
-                    android:fontFamily="@font/roboto"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/test_date"
-                    android:textColor="@color/white"
-                    android:textSize="18sp" />
-
-                <TextView
-                    android:id="@+id/category"
-                    android:fontFamily="@font/roboto"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/test_category"
-                    android:textColor="@color/white"
-                    android:textSize="18sp" />
-
-                <TextView
-                    android:id="@+id/genre"
-                    android:fontFamily="@font/roboto"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/test_genre"
-                    android:textColor="@color/white"
-                    android:textSize="18sp" />
-            </LinearLayout>
 
             <TextView
                 android:id="@+id/about_what_label"
@@ -198,10 +215,11 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="18dp"
                 android:layout_marginHorizontal="22dp"
+                android:textFontWeight="600"
                 android:textStyle="bold"
                 android:text="@string/head_desc"
                 android:textSize="22sp"
-                android:textColor="@color/white"
+                android:textColor="?attr/colorOnBackground"
                 />
 
             <TextView
@@ -212,7 +230,7 @@
                 android:layout_marginHorizontal="22dp"
                 android:layout_marginTop="5dp"
                 android:textSize="18sp"
-                android:textColor="@color/white"
+                android:textColor="?attr/colorOnBackground"
                 android:maxLines="8"
                 android:ellipsize="end"
                 android:text="@string/test_Desc"/>
@@ -239,27 +257,30 @@
                 android:layout_marginHorizontal="22dp"
                 android:text="@string/head_watch"
                 android:textSize="22sp"
+                android:textFontWeight="600"
                 android:textStyle="bold"
-                android:textColor="@color/white"
+                android:textColor="?attr/colorOnBackground"
                 />
 
-            <androidx.appcompat.widget.AppCompatButton
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/watch_button"
-                android:fontFamily="@font/roboto"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
                 android:layout_marginHorizontal="22dp"
-                android:paddingVertical="8dp"
-                android:text="@string/kinopoisk"
-                android:textAllCaps="false"
-                android:textColor="@color/white"
-                android:textSize="22sp"
-                android:background="@drawable/rounded_button_cansel_border"
-                android:drawableStart="@drawable/ic_play"
-                android:drawablePadding="5dp"
                 android:paddingStart="100dp"
-                android:paddingEnd="100dp"/>
+                android:paddingEnd="100dp"
+                android:text="@string/kinopoisk"
+                android:textColor="?attr/colorOnBackground"
+                android:textSize="22sp"
+                android:fontFamily="@font/roboto"
+                style="@style/Widget.Material3.Button.OutlinedButton"
+                app:icon="@drawable/ic_play"
+                app:iconPadding="10dp"
+                app:iconGravity="textStart"
+                android:paddingVertical="8dp"
+                app:iconTint="@color/main_purple"
+                />
 
 
             <LinearLayout
@@ -278,15 +299,16 @@
                     android:layout_marginHorizontal="22dp"
                     android:text="@string/head_related"
                     android:textSize="22sp"
+                    android:textFontWeight="600"
                     android:textStyle="bold"
-                    android:textColor="@color/white" />
+                    android:textColor="?attr/colorOnBackground" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
                     android:layout_marginTop="22dp"
-                    android:background="@color/gray151515"
+                    android:background="?attr/colorSurface"
                     android:paddingTop="13dp"
                     android:paddingBottom="23dp">
 
