--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -6,21 +6,40 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/gray111"
+    android:background="?android:colorBackground"
     tools:context=".ui.profile.ProfileFragment">
 
-    <androidx.appcompat.widget.SearchView
-        android:id="@+id/searchProfile"
+    <!-- Контейнер для поиска и кнопки темы -->
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/rounded_search_view"
-        android:padding="10dp"
-        app:queryHint="Поиск по названию"
-        app:iconifiedByDefault="false"
-        android:inputType="text"
+        android:orientation="horizontal"
         android:layout_marginTop="25dp"
-        android:layout_marginHorizontal="22dp"
-        app:searchIcon="@drawable/customicon"/>
+        android:layout_marginHorizontal="22dp">
+
+        <androidx.appcompat.widget.SearchView
+            android:id="@+id/searchProfile"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@drawable/rounded_search_view"
+            android:padding="10dp"
+            app:queryHint="Поиск по названию"
+            app:iconifiedByDefault="false"
+            android:inputType="text"
+            app:searchIcon="@drawable/customicon" />
+
+        <androidx.appcompat.widget.AppCompatImageButton
+            android:id="@+id/themeToggleButton"
+            android:layout_width="28dp"
+            android:layout_height="28dp"
+            android:layout_marginStart="8dp"
+            android:layout_gravity="center_vertical"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:src="@drawable/ic_light_mode"
+            android:scaleType="centerInside"
+            app:tint="?attr/colorOnBackground" />
+    </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_filter"
@@ -29,8 +48,7 @@
         android:orientation="horizontal"
         android:layout_marginTop="10dp"
         android:paddingHorizontal="16dp"
-        android:scrollbars="none"
-        />
+        android:scrollbars="none" />
 
     <TextView
         android:id="@+id/emptyMessage"
@@ -49,7 +67,6 @@
         android:layout_marginTop="15dp"
         android:layout_marginBottom="60dp"
         android:contentDescription="@string/desc_list"
-        android:scrollbarThumbVertical="@color/main_purple"/>
-
+        android:scrollbarThumbVertical="@color/main_purple" />
 
 </LinearLayout>
