--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/gray111"
+    android:background="?android:colorBackground"
     tools:context=".ui.search.SearchFragment"
     android:orientation="vertical">
 
@@ -38,26 +38,26 @@
 
             <androidx.appcompat.widget.AppCompatImageButton
                 android:id="@+id/voice_button"
-                android:layout_width="26dp"
-                android:layout_height="26dp"
+                android:layout_width="28dp"
+                android:layout_height="28dp"
                 android:layout_marginStart="15dp"
-                android:background="@null"
+                android:background="?attr/selectableItemBackgroundBorderless"
                 android:scaleType="centerInside"
                 android:layout_gravity="center_vertical"
                 android:contentDescription="@string/desc_voice"
-                android:tint="@color/white"
+                android:tint="?attr/colorOnBackground"
                 android:src="@drawable/ic_microphone" />
 
             <androidx.appcompat.widget.AppCompatImageButton
                 android:id="@+id/filter_button"
-                android:layout_width="26dp"
-                android:layout_height="26dp"
+                android:layout_width="28dp"
+                android:layout_height="28dp"
                 android:layout_marginStart="15dp"
-                android:background="@null"
+                android:background="?attr/selectableItemBackgroundBorderless"
                 android:scaleType="centerInside"
                 android:contentDescription="@string/desc_filters"
                 android:layout_gravity="center_vertical"
-                android:tint="@color/white"
+                android:tint="?attr/colorOnBackground"
                 android:src="@drawable/ic_filter" />
         </LinearLayout>
 
@@ -81,8 +81,9 @@
             android:orientation="vertical"
             android:layout_marginTop="25dp"
             android:paddingHorizontal="22dp"
-            android:visibility="gone">
-            
+            android:visibility="gone"
+            >
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -97,7 +98,8 @@
                     android:layout_height="wrap_content"
                     android:text="@string/franchise"
                     android:textSize="22sp"
-                    android:textColor="@color/white"
+                    android:textColor="?attr/colorOnBackground"
+                    android:textFontWeight="600"
                     android:textStyle="bold" />
 
                 <androidx.appcompat.widget.AppCompatImageButton
@@ -106,7 +108,7 @@
                     android:layout_height="28dp"
                     android:background="@null"
                     android:src="@drawable/ic_eye_open"
-                    android:tint="@color/white"
+                    android:tint="?attr/colorOnBackground"
                     android:scaleType="centerInside"
                     android:contentDescription="@string/desc_hide"
                     android:padding="2dp" />
@@ -175,17 +177,17 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/test_number_of_releases"
-                    android:textColor="@color/white"
+                    android:textColor="?attr/colorOnBackground"
                     android:layout_marginTop="8dp"
                     android:layout_gravity="center_horizontal" />
 
-                <androidx.appcompat.widget.AppCompatButton
+                <com.google.android.material.button.MaterialButton
                     android:id="@+id/franchise_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/follow"
-                    android:background="@drawable/rounded_button_background"
-                    android:textColor="@color/black"
+                    android:textColor="?attr/colorOnPrimary"
+                    app:cornerRadius="18dp"
                     android:layout_marginTop="10dp"
                     android:layout_marginBottom="10dp"
                     android:paddingHorizontal="40dp"
@@ -206,7 +208,8 @@
                 android:layout_height="wrap_content"
                 android:text="@string/search_results"
                 android:textSize="22sp"
-                android:textColor="@color/white"
+                android:textColor="?attr/colorOnBackground"
+                android:textFontWeight="600"
                 android:textStyle="bold"
                 android:paddingHorizontal="22dp"
                 android:layout_marginBottom="10dp" />
