--- a/app/src/main/res/layout/item_filter.xml
+++ b/app/src/main/res/layout/item_filter.xml
@@ -16,7 +16,7 @@
             android:id="@+id/filter_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/white_gray2"
+            android:textColor="?attr/colorOnSurfaceVariant"
             android:textSize="16sp"
             android:layout_marginEnd="8dp"
             android:text="@string/name" />
@@ -25,7 +25,7 @@
             android:id="@+id/filter_count"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/white_gray3"
+            android:textColor="?attr/colorOnSurfaceVariant"
             android:textSize="14sp"
             android:text="@string/test_number" />
     </LinearLayout>
@@ -35,6 +35,6 @@
         android:layout_width="match_parent"
         android:layout_height="2dp"
         android:layout_marginTop="4dp"
-        android:background="@android:color/white"
+        android:background="?attr/colorOnBackground"
         android:visibility="gone" />
 </LinearLayout>
