--- a/app/src/main/res/layout/item_related.xml
+++ b/app/src/main/res/layout/item_related.xml
@@ -36,9 +36,9 @@
         android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:text="Название"
-        android:textColor="@color/white"
+        android:textColor="?attr/colorOnBackground"
         android:textSize="14sp"
-        android:maxLines="2"
+        android:maxLines="3"
         android:ellipsize="end"
         android:paddingStart="6dp"
         android:paddingEnd="6dp"
