--- a/app/src/main/res/layout/item_search_history.xml
+++ b/app/src/main/res/layout/item_search_history.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="48dp"
     android:orientation="horizontal"
@@ -17,7 +18,8 @@
         android:scaleType="centerInside"
         android:layout_marginEnd="10dp"
         android:src="@drawable/ic_history"
-        android:padding="4dp" />
+        android:padding="4dp"
+        app:tint="?attr/colorOnBackground" />
 
     <TextView
         android:id="@+id/history_query_text"
@@ -25,7 +27,7 @@
         android:layout_weight="1"
         android:layout_height="wrap_content"
         android:text="Текст"
-        android:textColor="@color/white"
+        android:textColor="?attr/colorOnBackground"
         android:textSize="16sp"
         android:maxLines="1"
         android:ellipsize="end" />
@@ -36,7 +38,7 @@
         android:layout_height="24dp"
         android:scaleType="centerInside"
         android:src="@drawable/ic_clear"
-        android:tint="@color/white"
+        android:tint="?attr/colorOnBackground"
         android:padding="4dp"
         android:background="@null" />
 </LinearLayout>
