--- a/app/src/main/res/drawable/error_image_background.xml
+++ b/app/src/main/res/drawable/error_image_background.xml
@@ -2,18 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!-- Фон -->
-    <item android:drawable="?attr/colorSurface" />
-
-    <!-- Обводка -->
-    <item>
-        <shape android:shape="rectangle">
-            <solid android:color="@android:color/transparent" />
-            <stroke
-                android:width="0.5dp"
-                android:color="?attr/colorOutline" />
-            <corners android:radius="10dp" />
-        </shape>
-    </item>
+    <item android:drawable="?attr/colorErrorContainer" />
 
     <!-- Значок ошибки -->
     <item
