--- a/app/src/main/res/layout/fragment_item.xml
+++ b/app/src/main/res/layout/fragment_item.xml
@@ -115,59 +115,29 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:layout_marginEnd="16dp"
+                        android:layout_marginEnd="5dp"
                         android:text="@string/add_button"
                         android:textColor="@color/black"
-                        android:textSize="20sp"
+                        android:textSize="22sp"
                         app:cornerRadius="18dp"
                         android:minHeight="48dp"
                         android:paddingVertical="8dp"
                         style="@style/Widget.Material3.Button.OutlinedButton"
                         app:backgroundTint="@color/white" />
 
-                    <com.google.android.material.card.MaterialCardView
+                    <androidx.appcompat.widget.AppCompatImageButton
                         android:id="@+id/rateButton"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginEnd="8dp"
-                        app:cardCornerRadius="18dp"
-                        app:strokeColor="?attr/colorOutline"
-                        app:strokeWidth="1dp"
-                        app:cardBackgroundColor="@color/white"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:backgroundTint="@color/white"
+                        android:background="?attr/selectableItemBackgroundBorderless"
+                        android:padding="10dp"
+                        android:scaleType="centerInside"
+                        android:src="@drawable/ic_dots"
+                        android:contentDescription="@string/test_contentDesc"
+                        android:tint="@color/white"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintBottom_toBottomOf="parent">
-
-                        <androidx.constraintlayout.widget.ConstraintLayout
-                            android:layout_width="76dp"
-                            android:layout_height="44dp"
-                            android:padding="10dp">
-
-                            <ImageView
-                                android:id="@+id/rateIcon"
-                                android:layout_width="wrap_content"
-                                android:layout_height="0dp"
-                                android:scaleType="centerInside"
-                                android:src="@drawable/ic_rating_star"
-                                android:contentDescription="@string/test_contentDesc"
-                                app:layout_constraintStart_toStartOf="parent"
-                                app:layout_constraintTop_toTopOf="parent"
-                                app:layout_constraintBottom_toBottomOf="parent"
-                                app:layout_constraintEnd_toStartOf="@id/rateText" />
-
-                            <TextView
-                                android:id="@+id/rateText"
-                                android:layout_width="wrap_content"
-                                android:layout_height="0dp"
-                                android:gravity="center_vertical"
-                                android:fontFamily="@font/roboto"
-                                android:textColor="@color/main_purple"
-                                android:textSize="20sp"
-                                android:visibility="gone"
-                                app:layout_constraintEnd_toEndOf="parent"
-                                app:layout_constraintTop_toTopOf="parent"
-                                app:layout_constraintBottom_toBottomOf="parent"/>
-                        </androidx.constraintlayout.widget.ConstraintLayout>
-                    </com.google.android.material.card.MaterialCardView>
+                        app:layout_constraintBottom_toBottomOf="parent" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -272,7 +242,7 @@
                 android:paddingEnd="100dp"
                 android:text="@string/kinopoisk"
                 android:textColor="?attr/colorOnBackground"
-                android:textSize="22sp"
+                android:textSize="20sp"
                 android:fontFamily="@font/roboto"
                 style="@style/Widget.Material3.Button.OutlinedButton"
                 app:icon="@drawable/ic_play"
